--- a/src/styles/blocks/button.scss
+++ b/src/styles/blocks/button.scss
@@ -19,7 +19,7 @@
     font-weight: 700;
     line-height: 56px;
     text-align: center;
-    color: $colorDarkGrey;
+    color: #1d1d1d;
     border-radius: 40px;
 
     @include onTablet {
