--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -1,7 +1,7 @@
 .page {
   scroll-behavior: smooth;
   &__body {
-    background-color: $colorDarkGrey;
+    background-color: #1d1d1d;
 
     &--with-menu {
       overflow: hidden;
